# compressor-mpc

./: .gitignore  CMakeLists.txt  Doxyfile  read_timing_data.m
include/: aug_lin_sys.h  common-variables.h  compressor.h  constexpr_array.h  controller_interface.h  distributed_controller.h  distributed_controller_list.h  distributed_solver.h  dynamic_system.h  global.h  input_constraints.h  mpc_qp_solver.h  nerve_center.h  null_index_array.h  observer.h  parallel_compressors.h  parallel_compressors_constants.h  prediction.h  read_files.h  reduced_dynamic_system.h  serial_compressors.h  serial_compressors_constants.h  simulation_system.h  tank.h  time_delay.h  valve_eqs.h
libs/: CMakeLists.txt  aug_lin_sys.cc  distributed_controller.cc  observer.cc
parallel/: constraints  disturbances_ncoop  results.tar.xz  uweight_cent  uweight_coop  uweight_ncoop  xinit_coop  yref  yweight_coop  yweight_ncoop
serial/: cent_disturbances  coop_disturbances  dist_constraints  disturbances_ncoop  disturbances_ncoop_unstable  ncoop_disturbances  ncoop_unstable_disturbances  uinit_ncoop  uinit_ncoop_unstable  uweight_cent  uweight_coop  uweight_ncoop  uweight_ncoop_unstable  xinit_ncoop  xinit_ncoop_unstable  yref  yref_real  yweight_cent  yweight_coop  yweight_ncoop  yweight_ncoop_unstable
serial/output/: compare_timing_ncoop3.fig  plot_timing  plot_timing.m
setup/: run-all-tests.sh  setup-cent-par  setup-cent-ser  setup-coop-par  setup-coop-ser  setup-ncoop-par  setup-ncoop-ser
src/: CMakeLists.txt  aug_lin_sys.cc  aug_lin_sys.h  aug_lin_sys_list.h  augmented_system.cc  augmented_system.h  augmented_system_list.h  centralized_cpu_test.cc  centralized_parallel.cc  centralized_parallel_setuponly.cc  centralized_serial.cc  centralized_serial_setuponly.cc  centralized_split_timing_parallel.cc  centralized_split_timing_serial.cc  centralized_test.cc  common-variables.h  comp_coeffs.h  comp_state.h  comp_test.cc  compressor.cc  compressor.h  compressor_list.h  compressor_simulation.h  const_flow.h  const_sim.h  constexpr_array.h  controller_interface.h  coop_parallel.cc  coop_serial.cc  coop_split_timing_parallel.cc  coop_split_timing_serial.cc  cooperative_controller.cc  cooperative_controller.h  cooperative_controller_list.h  cooperative_cpu_test.cc  cooperative_test.cc  default_const_flow.h  defs.h  delay_test.cc  distributed_controller.cc  (+52 more)
systems/: CMakeLists.txt  compressor.cc  parallel_compressors.cc  tank.cc
template_src/: .ycm_extra_conf.py  CMakeLists.txt  comp_test.cc  compressor.cc  compressor.h  dynamic_system.h  parallel_compressors.cc  parallel_compressors.h  simulation_compressor.h  simulation_parallel_compressors.h  simulation_system.h  tank.cc  tank.h  valve_eqs.h
tests/: CMakeLists.txt  centralized-parallel-with-timing.cc  centralized-serial-with-timing.cc  centralized_parallel.cc  cooperative-parallel-with-timing.cc  cooperative-serial-with-timing.cc  noncoop-parallel-with-timing.cc  noncoop-serial-with-timing.cc  noncoop_serial.cc
timing-tests/: CMakeLists.txt  centralized_serial.cc  coop_serial.cc  noncoop_serial.cc
